# data_harvesting

./: .gitignore  AGENTS.md  README.md  dvc.yaml  evaluate.py  main.py  params.toml  params.yaml  profile_training.py  pyproject.toml  train.py  tune.py  tune_worker.py
data_harvesting/: actor.py  algorithm.py  checkpoint.py  collector.py  critic.py  encoder.py  environment.py  eval.py  gradys_torchrl_environment.py  loss.py  main.py  metrics.py  optimization.py  train.py  transformer.py  utils.py
data_harvesting/encoder/: blocks.py  heads.py
data_harvesting/environment/: __init__.py  data_collection.py  environment.py  gradys_env.py  make.py  protocols.py
dvclive/: metrics.json  params.yaml
mlflow_server/: .env.example  Dockerfile  README.md  docker-compose.yml
mlflow_server/backup/: Dockerfile  RESTORE.md  backup.sh  entrypoint.sh
mlruns/139407390714801080/: meta.yaml
mlruns/213465797711622854/: meta.yaml
mlruns/221261372118423086/: meta.yaml
mlruns/247209848122639062/: meta.yaml
mlruns/256522931402279818/: meta.yaml
mlruns/315238843689141339/: meta.yaml
mlruns/343242615256614319/: meta.yaml
mlruns/344383011720539909/: meta.yaml
mlruns/376944095390572173/: meta.yaml
mlruns/589497434359050565/: meta.yaml
mlruns/846470530601412612/: meta.yaml
mlruns/863988749784768555/: meta.yaml
tests/: test_algorithm_maddpg.py  test_checkpoint.py  test_collector.py  test_eval.py  test_exploratory_policy.py  test_loss_module.py  test_masking_requirements.py  test_metrics_collector.py  test_train_checkpoints.py  test_train_evaluation.py
(+3276 files in other folders)
