[project]
name = "data-harvesting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradysim>=0.7.3",
    "gymnasium>=1.2.0",
    "numpy>=2.2.6",
    "pettingzoo>=1.25.0",
    "torch>=2.8.0",
    "torchrl>=0.10.0",
    "torchvision>=0.23.0",
]
